//go:build ignore

package main

import (
	"context"
	"flag"
	"fmt"
	"log"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	pb "utls_client/proto/httpforward"
)

func main() {
	// è§£æå‘½ä»¤è¡Œå‚æ•°
	serverAddr := flag.String("server", "localhost:50051", "gRPC æœåŠ¡å™¨åœ°å€")
	clientIP := flag.String("client-ip", "192.168.1.100", "å®¢æˆ·ç«¯ IP åœ°å€ï¼ˆé¦–æ¬¡æ¡æ‰‹éœ€è¦ï¼‰")
	hostname := flag.String("hostname", "www.example.com", "ç›®æ ‡ä¸»æœºå")
	path := flag.String("path", "/", "è¯·æ±‚è·¯å¾„")
	flag.Parse()

	// è¿æ¥ gRPC æœåŠ¡å™¨
	conn, err := grpc.Dial(*serverAddr, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("è¿æ¥æœåŠ¡å™¨å¤±è´¥: %v", err)
	}
	defer conn.Close()

	client := pb.NewHTTPForwardServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	// 1. é¦–æ¬¡æ¡æ‰‹ï¼Œè·å–å®¢æˆ·ç«¯ç¼–ç 
	fmt.Printf("1. æ¡æ‰‹ - å‘é€å®¢æˆ·ç«¯ IP: %s\n", *clientIP)
	handshakeReq := &pb.HandshakeRequest{
		ClientIp: *clientIP,
	}
	handshakeResp, err := client.Handshake(ctx, handshakeReq)
	if err != nil {
		log.Fatalf("æ¡æ‰‹å¤±è´¥: %v", err)
	}
	clientCode := handshakeResp.ClientCode
	fmt.Printf("   âœ… è·å¾—å®¢æˆ·ç«¯ç¼–ç : %d\n\n", clientCode)

	// 2. é¦–æ¬¡è¯·æ±‚ - ä½¿ç”¨åŸå§‹ä¸»æœºå
	fmt.Printf("2. é¦–æ¬¡è¯·æ±‚ - ä½¿ç”¨åŸå§‹ä¸»æœºå: %s\n", *hostname)
	req1 := &pb.ForwardRequestRequest{
		ClientId: &pb.ForwardRequestRequest_ClientCode{ClientCode: clientCode},
		Hostname: &pb.ForwardRequestRequest_HostnameRaw{HostnameRaw: *hostname},
		Path:     *path,
	}

	resp1, err := client.ForwardRequest(ctx, req1)
	if err != nil {
		log.Fatalf("è¯·æ±‚å¤±è´¥: %v", err)
	}

	fmt.Printf("   Status Code: %d\n", resp1.StatusCode)
	fmt.Printf("   å®¢æˆ·ç«¯ç¼–ç : %d\n", resp1.ClientCode)
	fmt.Printf("   ä¸»æœºåç¼–ç : %d\n", resp1.HostnameCode)
	fmt.Printf("   å“åº”ä½“é•¿åº¦: %d å­—èŠ‚\n\n", len(resp1.Body))

	hostnameCode := resp1.HostnameCode

	// 3. åç»­è¯·æ±‚ - ä½¿ç”¨ç¼–ç ï¼ˆèŠ‚çœæµé‡ï¼‰
	fmt.Printf("3. åç»­è¯·æ±‚ - ä½¿ç”¨ç¼–ç ï¼ˆå®¢æˆ·ç«¯ç¼–ç =%d, ä¸»æœºåç¼–ç =%dï¼‰\n", clientCode, hostnameCode)
	req2 := &pb.ForwardRequestRequest{
		ClientId: &pb.ForwardRequestRequest_ClientCode{ClientCode: clientCode},
		Hostname: &pb.ForwardRequestRequest_HostnameCode{HostnameCode: hostnameCode},
		Path:     *path,
	}

	resp2, err := client.ForwardRequest(ctx, req2)
	if err != nil {
		log.Fatalf("è¯·æ±‚å¤±è´¥: %v", err)
	}

	fmt.Printf("   Status Code: %d\n", resp2.StatusCode)
	fmt.Printf("   å“åº”ä½“é•¿åº¦: %d å­—èŠ‚\n\n", len(resp2.Body))

	// 4. æµ‹è¯•ä¸åŒä¸»æœºå
	testHostname := "www.google.com"
	fmt.Printf("4. æµ‹è¯•æ–°ä¸»æœºå: %s\n", testHostname)
	req3 := &pb.ForwardRequestRequest{
		ClientId: &pb.ForwardRequestRequest_ClientCode{ClientCode: clientCode},
		Hostname: &pb.ForwardRequestRequest_HostnameRaw{HostnameRaw: testHostname},
		Path:     "/",
	}

	resp3, err := client.ForwardRequest(ctx, req3)
	if err != nil {
		log.Fatalf("è¯·æ±‚å¤±è´¥: %v", err)
	}

	fmt.Printf("   Status Code: %d\n", resp3.StatusCode)
	fmt.Printf("   æ–°ä¸»æœºåç¼–ç : %d\n", resp3.HostnameCode)
	fmt.Printf("   å“åº”ä½“é•¿åº¦: %d å­—èŠ‚\n\n", len(resp3.Body))

	fmt.Println("âœ… æµ‹è¯•å®Œæˆï¼")
	fmt.Println("\nğŸ’¡ æµé‡èŠ‚çœè¯´æ˜ï¼š")
	fmt.Println("   - é¦–æ¬¡æ¡æ‰‹: ä¼ è¾“å®¢æˆ·ç«¯ IP")
	fmt.Println("   - åç»­è¯·æ±‚: åªéœ€ä¼ è¾“ç¼–ç ï¼ˆ1,2,3,4...ï¼‰")
	fmt.Println("   - ç›¸åŒä¸»æœºå: ä½¿ç”¨ç¼–ç ï¼Œæ— éœ€é‡å¤ä¼ è¾“ä¸»æœºåå­—ç¬¦ä¸²")
	fmt.Println("   - é 200 çŠ¶æ€ç : body ä¸ºç©ºï¼ŒèŠ‚çœæµé‡")
}
